--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.5",
     "env-cmd": "^10.1.0",
     "lottie-react": "^2.4.0",
     "postcss": "^8.4.21",
