--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.5",
     "env-cmd": "^10.1.0",
+    "html-entities": "^2.3.3",
     "lottie-react": "^2.4.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
