--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.5",
     "env-cmd": "^10.1.0",
+    "fast-equals": "^5.0.1",
     "html-entities": "^2.3.3",
     "lottie-react": "^2.4.0",
     "postcss": "^8.4.21",
