--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "env-cmd -f .env.development vite & npm run tailwind",
     "build": "vite build",
     "build-2": "env-cmd -f .env.production vite build",
-    "preview": "vite preview"
+    "build-desktop": "env-cmd -f .env.production vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -29,6 +31,7 @@
     "recharts": "^2.5.0"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.3.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
